--- a/index.html
+++ b/index.html
@@ -112,6 +112,6 @@
     <div class="glow"></div>
     <div class="flame"></div>
   </div>
-  <div class="caption">5th of 14</div>
+  <div class="caption">Week 6th of 14</div>
 </body>
 </html>
