--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
     <div class="glow"></div>
     <div class="flame"></div>
   </div>
-  <div class="caption"><a href="https://www.youtube.com/watch?v=4NKhYkFAmUw">1.314</a></div>
+  <div class="caption"><a href="https://youtu.be/kWUV5-frRU4">8th</a></div>
 </body>
 </html>
