--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
 
     <div class="sky" id="sky-bg">
-        <a href="" id="sun-link" target="_blank">
+        <a href="https://www.youtube.com/watch?v=RxnXQA0niSU" id="sun-link" target="_blank">
             <div class="sun"></div>
         </a>
         <div class="horizon"></div>
