--- a/sloka.html
+++ b/sloka.html
@@ -95,8 +95,21 @@
 
         <hr>
 
-        <div id="message-area">
-            </div>
+<div id="message-area">
+    <p style="font-size: 1.1em; line-height: 1.8; text-align: justify; max-width: 700px; margin: auto;">
+        <em>
+        May we move away from our projections and the thoughts we harbor about ourselves and our beloved ones, 
+        traveling instead toward the Radiance of what is Real. May we see those we love truly as they are, 
+        without overlaying their authentic selves with the veil of our own notions. 
+        <br><br>
+        May our illusions, doubts, and the weight of our expectations be put to rest by the inner light. 
+        In this realization of our eternal nature, let us understand that separation is but a shadow, 
+        and that we are eternally One. When we attain union with our true selves, 
+        <strong>Śānti</strong> naturally arises at all three levels: within our own being, 
+        within our shared environment, and within the heart of all existence.
+        </em>
+    </p>
+</div>
     </div>
 
 </body>
