--- a/sloka.html
+++ b/sloka.html
@@ -98,15 +98,13 @@
 <div id="message-area">
     <p style="font-size: 1.1em; line-height: 1.8; text-align: justify; max-width: 700px; margin: auto;">
         <em>
-        May we move away from our projections and the thoughts we harbor about ourselves and our beloved ones, 
-        traveling instead toward the Radiance of what is Real. May we see those we love truly as they are, 
-        without overlaying their authentic selves with the veil of our own notions. 
-        <br><br>
-        May our illusions, doubts, and the weight of our expectations be put to rest by the inner light. 
-        In this realization of our eternal nature, let us understand that separation is but a shadow, 
-        and that we are eternally One. When we attain union with our true selves, 
-        <strong>Śānti</strong> naturally arises at all three levels: within our own being, 
-        within our shared environment, and within the heart of all existence.
+        <strong>Lead us from the unreal to the Real. </strong>May we step away from the shadows of our own projections and the rigid notions we hold of ourselves and those we love. Grant us the clarity to peel back the layers of our own thoughts, so we may witness the authentic nature of our beloved ones. Let us no longer overlay their truth with our expectations, nor trap them within the narrow ideas of who we think they ought to be. May we meet them in the light of what is, rather than the darkness of what we demand.
+        <br /><br />
+        <strong>Lead us from darkness to Light.</strong> May the inner light that resides within us—and within them—be our only guide. Put to rest the ghosts of our doubts and the turbulence of our confusions. Let the light of the soul dissolve the illusions of the ego, allowing us to see intentions clearly, uncolored by the filter of our own fears. May we meet every soul not with our fragmented, wounded parts, but with the fullness of our wholeness.
+        <br />< br/>
+        <strong>Lead us from death to Immortality.</strong> May we awaken to the realization of our eternal nature, where the fever of separation is finally stilled. Grant us the wisdom to see that we have always been one, and that the distance between us is but a false understanding of our true selves. In this sacred union, where the watcher and the watched are one, may we find the peace that transcends all understanding.
+        <br />< br/>
+        <strong>Oṃ Śāntiḥ, Śāntiḥ, Śāntiḥ.</strong> Peace within the quiet of our own hearts. Peace within the circle of our environment. Peace within the vastness of all existence.
         </em>
     </p>
 </div>
