--- a/sloka.html
+++ b/sloka.html
@@ -110,5 +110,28 @@
 </div>
     </div>
 
+
+    <style>
+    .contemplation-link {
+        margin-top: 40px;
+        display: inline-block;
+        text-decoration: none;
+        color: #d35400;
+        font-size: 1.1rem;
+        border: 1px solid #d35400;
+        padding: 10px 25px;
+        border-radius: 30px;
+        transition: all 0.3s ease;
+    }
+    .contemplation-link:hover {
+        background: #d35400;
+        color: #fff;
+    }
+</style>
+
+<a href="2201.html" class="contemplation-link">
+    A Contemplation →
+</a>
+
 </body>
 </html>
