--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sacred Solar & Lunar Cycle with Real Moon</title>
+    <title>Can you tell a green field?</title>
     <style>
         :root {
             --sky-color: #001122;
