--- a/index.html
+++ b/index.html
@@ -157,7 +157,10 @@
         <div class="horizon"></div>
     </div>
 
-
+    <!-- Debug Controls -->
+    <button id="debug-toggle">Toggle Night Mode</button>
+    <div id="debug-info"></div>
+    
     <script>
         // Moon phase image URLs using NASA SVS (Scientific Visualization Studio)
         // These are real photos from the Lunar Reconnaissance Orbiter
