--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
         </a>
         
         <div class="moon-container">
-            <img id="moon-image" class="moon-image" alt="Moon Phase">
+            <a href="https://www.youtube.com/watch?v=Y5YKzTWU0Ng" id="moon-link">
+            <img id="moon-image" class="moon-image" alt="Moon Phase"></a>
         </div>
         
         <div class="horizon"></div>
